Rilascio statico: - Corretto bug su paginazione - icona (in mobile non sbordano più ma vanno a capo) - Corretto treeviev (le icone check erano disallineate al box) - Corretto word-break per descrizioni in modali - Corretto overflow con scoll a vista su IE per menu contestuale in tabelle - Corretto disallineamento icona in bottone Ricerca Avanzata

--- a/librerie/youwebbusiness/fe/css/priv_base.css
+++ b/librerie/youwebbusiness/fe/css/priv_base.css
@@ -1056,6 +1056,7 @@ dl dd, dl-value, .list dd, .list-value {
   padding: 0 0 0.25em 0;
   float: right;
   clear: right;
+  word-break: break-all;
 }
 dl dt.full-w, dl dd.full-w, dl-key.full-w, dl-value.full-w, .list dt.full-w, .list dd.full-w, .list-key.full-w, .list-value.full-w {
   width: 100%;
